--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-tooltip": "^5.28.1",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.7",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "ua-parser-js": "^2.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
