--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.0",
+    "firebase-functions": "^6.3.2",
     "lottie-react": "^2.4.1",
     "motion": "^12.19.1",
     "react": "^19.1.0",
